app/assets/stylesheets/style.css.scss
  $input-background: #ffffff;
  $border-default: 1px solid #cccccc;
  $green:#19DD89;
  $winter-green:#44932B;
  $blue:#2287e6;
  $other-blue:#2f87ed;
  $light-grey:#f7f7f7;
  $style: solid;
  /** resets **/
  body{
    background: white;
    font-family: "myriad-pro","Helvetica Neue", Helvetica, Arial, sans-serif;
    font-weight: 100;
    font-size: 16px;
  }
  p{
    font-family: "myriad-pro","Helvetica Neue", Helvetica, Arial, sans-serif;
  }
  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    font-weight: normal;
  }
  label,
  input,
  button,
  select,
  textarea {
    font-size: 16px;
    font-weight: 100;
    line-height: 20px;
  }
  input,button,select,textarea,input.btn,button.btn,a.btn,a.win-command, button, input[type="button"], input[type="reset"], input[type="submit"]  {
    font-family: "museo-sans","Helvetica Neue", Helvetica, Arial, sans-serif;
    font-weight: 100;
    font-size: 16px;
  }
  label.checkbox input[type="checkbox"] ~ span.metro-checkbox::after {
    font-family: none;
  }
  /** navbar styles **/
  #navbar {
    background: #F0F0F0 url(../img/noise-f1.gif) repeat -70% 0;
  }

  .navbar {

    .navbar-inner{
     border: 0;

     -webkit-border-top-left-radius:0px;
     -moz-border-top-left-radius:0px;
     border-top-left-radius: 0px;
     -webkit-border-top-right-radius:0px;
     -moz-border-top-right-radius:0px;
     border-top-right-radius: 0px;

     -webkit-box-shadow: 0 2px 10px rgba(0,0,0,.25);
     -moz-box-shadow: 0 2px 10px rgba(0,0,0,.25);
     box-shadow: 0 2px 10px rgba(0,0,0,.25);
   }

   .brand{
    padding: 0px; /* Increase vertical padding to match navbar links */
    font-size: 18px;
    text-shadow: 0 -1px 0 rgba(0,0,0,.5);
  }
}

.navbar-wrapper {
  position: relative;
  z-index: 10;
  margin-bottom: -90px; /* Negative margin to pull up carousel. 90px is roughly margins and height of navbar. */
}

#remember-me{
  padding-left:3px;
  margin-left: 0px;
  input{
    margin-left:2px;
    margin-right:3px;
  }
}

#forgot-password{
  margin-left: 0px;
  padding-top:5px;
  margin-top: 5px;
  color:#777;
}


#header-container{
  display: block;
}

#main-nav-menu{
  padding-top:25px;
}

#second-nav{
  margin-top:25px;
}
/** Hero unit styles **/
.main-unit {     
  background-image: url(../img/noisy-texture.png);
  background-color: #4398F2;
  background-position: 50% 50%;
  background-repeat: repeat repeat;
  margin-top: 20px;
  margin-bottom: 60px;
  position: relative;
  width: 100%;
  overflow: hidden;

}


#take-a-mock-btn{
  font-size: 24px;
  padding-top: 40px;
  padding-bottom: 40px;
  padding-left: 15px;
  padding-right: 15px;
  text-align: center;
  display: block;
  -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
  -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
  border : 1px solid $other-blue;
}

#sign-up{
  margin-top: 10px;
  padding: 15px;
  -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
  -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
  border : 1px solid $other-blue;
}

/** content styles **/
.marketing {
  text-align: center;
  color: #5A5A5A;
  margin-top: 30px;
}
.marketing .marketing-byline {
  margin-bottom: 40px;
  font-size: 20px;
  font-weight: 300;
  line-height: 1.25;
  color: #999;
}
.test-list .command-btn {
  display: none;
}
#content{
  margin-top: 30px;
}

#action-bar{
  position: fixed;
  top: 0px;
  z-index: 1999;
  background-color: white;
  .span6{
    width: 500px;
  }
}

#action-bar.no-bk{
  background-color: transparent !important;
  hr{
    display: none;
  }
  #btn-hide-time{
    display: none;
  }
}
#section-info{
  width:60%;
  margin: 0px auto;
  margin-top: 100px;
}

#options{
  width:100%;
  margin:0 auto;
  .form-horizontal .controls {
    width:50%;
    margin:0 auto;
  }
}
#test-content{

  .single{
    width:60%;
    margin: 0px auto;
    margin-top: 200px;
  }

  .question{
    padding-bottom: 10px;
    text-align:justify;
    width: 100%;
    .blank{
      width:200px;
      border-bottom: 1px solid #777;
      display: inline-block;
    }
  }

  .instruction{
    width: 100%;
    text-align:justify;
  }

  .left-pane{
    position: absolute;
    top: 250px;
    width:35%;
    left: 10%;
    bottom: 120px;

  }
  .right-pane{
    position: absolute;
    top: 250px;
    left: 50%;
    width: 35%;
    bottom: 120px;
    .options{
      width:100%;
      margin:0px auto;
    }
  }

  .scroll-x { overflow-x: auto; }
  .scroll-y { overflow-y: auto; }
  .full-col { overflow: hidden; position: absolute; }
}

.fill, .pane { position: absolute; left: 0; top: 0; right: 0; bottom: 0; width: 100%; height: 100%; overflow:hidden;}


@media (min-width: 1200px){
  #test-content {
    .left-pane,.right-pane{
      top: 200px;
      width: 30%;
    }
    .left-pane{
      left: 18%;
    }
  }
}
@media (max-width: 979px) and (min-width: 768px){
  #test-content {
    .left-pane,.right-pane{
      top: 250px;
    }
    .left-pane{
      width:40%;
      left: 80px;
    }
    .right-pane{
      left: 50%;
      width: 40%;
    }
  }
}

@media (max-width: 767px){
  #test-content {
    .left-pane,.right-pane{
      top: 250px;
    }
    .left-pane{
      width:40%;
    }
    .right-pane{
      left: 50%;
      width: 40%;
    }
  }
}

@media (max-width: 480px){
  #test-content {
    .left-pane,.right-pane{
      top: 250px;
    }
    .single{
      width: 70%;
      margin-top: 50%;
    }
    .left-pane{
      width:25%;
    }
    .right-pane{
      left: 30%;
      width: 20%;
    }
  }
}

#product-features{
  ul{
    list-style: none;
    margin-left: 0px;
    li{
      padding:5px;
    }
  }
}
/* ... */

